# RiskLens

./: .gitignore  CMakeLists.txt  CVE-2021-3156.c  CVE_2013_2028.c  README.md  analyze_llm.py  cve20132028_scores.json  scores.json  sudoers_scores.json  test.txt  test2.c
prompts/: __init__.py  basline_prompt.py  prompt_utils.py
src/: main.cpp  main_v1.txt  main_v2.txt
